# common-cpp

./: .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE
.github/workflows/: build-test.yml  lint.yml
src/main/cc/common_cpp/fingerprinters/: BUILD.bazel  fingerprinters.cc  fingerprinters.h
src/main/cc/common_cpp/jni/: BUILD.bazel  deserialize_proto.h  jni_wrap.h
src/main/cc/common_cpp/macros/: BUILD.bazel  macros.h
src/main/cc/common_cpp/protobuf_util/: BUILD.bazel  riegeli_io.h  textproto_io.cc  textproto_io.h
src/main/cc/common_cpp/testing/: BUILD.bazel  common_matchers.h  random.cc  random.h  status_macros.h  status_matchers.h
src/main/cc/common_cpp/time/: started_thread_cpu_timer.cc  started_thread_cpu_timer.h
src/test/cc/common_cpp/fingerprinters/: BUILD.bazel  fingerprinters_test.cc
src/test/cc/common_cpp/macros/: BUILD.bazel  macros_test.cc
src/test/cc/common_cpp/protobuf_util/: BUILD.bazel  riegeli_io_test.cc  riegeli_io_test.proto
