load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "fingerprinters",
    srcs = ["fingerprinters.cc"],
    hdrs = ["fingerprinters.h"],
    strip_include_prefix = "/src/main/cc",
    deps = [
        "@boringssl//:crypto",
        "@com_google_absl//absl/base:config",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
        "@farmhash",
    ],
)
