load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

_INCLUDE_PREFIX = "/src/main/cc"

cc_library(
    name = "deserialize_proto",
    hdrs = ["deserialize_proto.h"],
    strip_include_prefix = _INCLUDE_PREFIX,
    visibility = ["//visibility:private"],
    deps = [
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_library(
    name = "jni_wrap",
    hdrs = ["jni_wrap.h"],
    strip_include_prefix = _INCLUDE_PREFIX,
    deps = [
        ":deserialize_proto",
        "//src/main/cc/common_cpp/macros",
        "@com_google_absl//absl/status:statusor",
    ],
)
