package(default_visibility = ["//visibility:public"])

cc_library(
    name = "common_matchers",
    testonly = True,
    hdrs = ["common_matchers.h"],
    strip_include_prefix = "/src/main/cc",
    deps = [
        "@com_google_googletest//:gtest",
        "@com_google_protobuf//:protobuf",
    ],
)

cc_library(
    name = "status",
    testonly = True,
    hdrs = [
        "status_macros.h",
        "status_matchers.h",
    ],
    strip_include_prefix = "/src/main/cc",
    deps = [
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest",
    ],
)

cc_library(
    name = "random",
    testonly = True,
    srcs = ["random.cc"],
    hdrs = ["random.h"],
    strip_include_prefix = "/src/main/cc",
    deps = [
        "@com_google_absl//absl/random",
        "@com_google_absl//absl/random:distributions",
    ],
)
